--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
   <body>
     <img src="header.jpg" alt="Header">
     <img src="hero.jpg" alt="Hero">
+    <img src="acustica.jpg" alt="acustica">
   </body>
 </html>
