--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
     <img src="header.jpg" alt="Header">
     <img src="hero.jpg" alt="Hero">
     <img src="acustica.jpg" alt="acustica">
+    <img src="clasica.jpg" alt="clasica">
   </body>
 </html>
