--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
       {
         margin: 0;
       }
+      body
+      {
+        border: 5px solid rgb(0, 103, 168);
+      }
       img
       {
         max-width: 100%;
