--- a/index.html
+++ b/index.html
@@ -16,9 +16,6 @@
     </style>
   </head>
   <body>
-    <img src="header.jpg" alt="Header">
-    <img src="hero.jpg" alt="Hero">
-    <img src="acustica.jpg" alt="acustica">
-    <img src="clasica.jpg" alt="clasica">
+    <img src="nueva-version.jpg" alt="Nueva">
   </body>
 </html>
