--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Invie</title>
     <style media="screen">
-      *
+      body
       {
         margin: 0;
       }
@@ -13,12 +13,24 @@
         max-width: 100%;
         vertical-align: top;
       }
+      img#responsive{
+        display: none;
+      }
+      @media (max-width: 768px) {
+        img#responsive{
+          display: block;
+        }
+        img.desktop{
+          display: none;
+        }
+      }
     </style>
   </head>
   <body>
-    <img src="header.jpg" alt="Header">
-    <img src="hero.jpg" alt="Hero">
-    <img src="acustica.jpg" alt="acustica">
-    <img src="clasica.jpg" alt="clasica">
+    <img src="invie-responsive.png" alt="responsive" id="responsive">
+    <img src="header.jpg" alt="Header" class="desktop">
+    <img src="hero.jpg" alt="Hero" class="desktop">
+    <img src="acustica.jpg" alt="acustica" class="desktop">
+    <img src="clasica.jpg" alt="clasica" class="desktop">
   </body>
 </html>
